project/PLC_Lab7/Compiler/obj/Release/net8.0/PatterParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/zahry/school/pjp/project/PLC_Lab7/Compiler/Patter.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Compiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class PatterParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, ID=17, 
		INT=18, BOOL=19, FLOAT=20, STRING=21, WS=22, COMMENT=23, ASSIGN=24, UN_MIN=25, 
		NEG_OP=26, CMP_LT=27, CMP_GT=28, ADD_OP=29, MIN_OP=30, CONCAT_OP=31, MUL_OP=32, 
		DIV_OP=33, MOD_OP=34, LOG_OR=35, LOG_AND=36, EQ=37, NEQ=38, QUES=39, COLON=40;
	public const int
		RULE_prog = 0, RULE_stat = 1, RULE_decleration = 2, RULE_dtype = 3, RULE_read = 4, 
		RULE_write = 5, RULE_statwrap = 6, RULE_if = 7, RULE_while = 8, RULE_for = 9, 
		RULE_expr = 10, RULE_primary = 11, RULE_values = 12;
	public static readonly string[] ruleNames = {
		"prog", "stat", "decleration", "dtype", "read", "write", "statwrap", "if", 
		"while", "for", "expr", "primary", "values"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "','", "'int'", "'float'", "'bool'", "'string'", "'read'", 
		"'write'", "'{'", "'}'", "'if'", "'else'", "'while'", "'for'", "'('", 
		"')'", null, null, null, null, null, null, null, "'='", null, "'!'", "'<'", 
		"'>'", "'+'", null, "'.'", "'*'", "'/'", "'%'", "'||'", "'&&'", "'=='", 
		"'!='", "'?'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "ID", "INT", "BOOL", "FLOAT", "STRING", 
		"WS", "COMMENT", "ASSIGN", "UN_MIN", "NEG_OP", "CMP_LT", "CMP_GT", "ADD_OP", 
		"MIN_OP", "CONCAT_OP", "MUL_OP", "DIV_OP", "MOD_OP", "LOG_OR", "LOG_AND", 
		"EQ", "NEQ", "QUES", "COLON"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Patter.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PatterParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 26; stat();
				}
				}
				State = 29;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << ID) | (1L << INT) | (1L << BOOL) | (1L << FLOAT) | (1L << STRING) | (1L << UN_MIN) | (1L << NEG_OP))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SemContext : StatContext {
		public SemContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterSem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitSem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSem(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclContext : StatContext {
		public DeclerationContext decleration() {
			return GetRuleContext<DeclerationContext>(0);
		}
		public DeclContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExpContext : StatContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ExpContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RdContext : StatContext {
		public ReadContext read() {
			return GetRuleContext<ReadContext>(0);
		}
		public RdContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterRd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitRd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WrContext : StatContext {
		public WriteContext write() {
			return GetRuleContext<WriteContext>(0);
		}
		public WrContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterWr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitWr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ScopedContext : StatContext {
		public StatwrapContext statwrap() {
			return GetRuleContext<StatwrapContext>(0);
		}
		public ScopedContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterScoped(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitScoped(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScoped(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfstatContext : StatContext {
		public IfContext @if() {
			return GetRuleContext<IfContext>(0);
		}
		public IfstatContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterIfstat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitIfstat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfstat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhilecycContext : StatContext {
		public WhileContext @while() {
			return GetRuleContext<WhileContext>(0);
		}
		public WhilecycContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterWhilecyc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitWhilecyc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhilecyc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForcycContext : StatContext {
		public ForContext @for() {
			return GetRuleContext<ForContext>(0);
		}
		public ForcycContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterForcyc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitForcyc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForcyc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_stat);
		try {
			State = 48;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__0:
				_localctx = new SemContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 31; Match(T__0);
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
				_localctx = new DeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 32; decleration();
				State = 33; Match(T__0);
				}
				break;
			case T__14:
			case ID:
			case INT:
			case BOOL:
			case FLOAT:
			case STRING:
			case UN_MIN:
			case NEG_OP:
				_localctx = new ExpContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 35; expr(0);
				State = 36; Match(T__0);
				}
				break;
			case T__6:
				_localctx = new RdContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 38; read();
				State = 39; Match(T__0);
				}
				break;
			case T__7:
				_localctx = new WrContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 41; write();
				State = 42; Match(T__0);
				}
				break;
			case T__8:
				_localctx = new ScopedContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 44; statwrap();
				}
				break;
			case T__10:
				_localctx = new IfstatContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 45; @if();
				}
				break;
			case T__12:
				_localctx = new WhilecycContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 46; @while();
				}
				break;
			case T__13:
				_localctx = new ForcycContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 47; @for();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclerationContext : ParserRuleContext {
		public DtypeContext dtype() {
			return GetRuleContext<DtypeContext>(0);
		}
		public ITerminalNode[] ID() { return GetTokens(PatterParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(PatterParser.ID, i);
		}
		public DeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclerationContext decleration() {
		DeclerationContext _localctx = new DeclerationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_decleration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; dtype();
			State = 51; Match(ID);
			State = 56;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__1) {
				{
				{
				State = 52; Match(T__1);
				State = 53; Match(ID);
				}
				}
				State = 58;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DtypeContext : ParserRuleContext {
		public DtypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dtype; } }
	 
		public DtypeContext() { }
		public virtual void CopyFrom(DtypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IntDtypeContext : DtypeContext {
		public IntDtypeContext(DtypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterIntDtype(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitIntDtype(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntDtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FltDtypeContext : DtypeContext {
		public FltDtypeContext(DtypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterFltDtype(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitFltDtype(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFltDtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BolDtypeContext : DtypeContext {
		public BolDtypeContext(DtypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterBolDtype(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitBolDtype(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBolDtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StrDtypeContext : DtypeContext {
		public StrDtypeContext(DtypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterStrDtype(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitStrDtype(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStrDtype(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DtypeContext dtype() {
		DtypeContext _localctx = new DtypeContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_dtype);
		try {
			State = 63;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__2:
				_localctx = new IntDtypeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 59; Match(T__2);
				}
				break;
			case T__3:
				_localctx = new FltDtypeContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; Match(T__3);
				}
				break;
			case T__4:
				_localctx = new BolDtypeContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 61; Match(T__4);
				}
				break;
			case T__5:
				_localctx = new StrDtypeContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 62; Match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReadContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(PatterParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(PatterParser.ID, i);
		}
		public ReadContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_read; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterRead(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitRead(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRead(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReadContext read() {
		ReadContext _localctx = new ReadContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_read);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(T__6);
			State = 66; Match(ID);
			State = 71;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__1) {
				{
				{
				State = 67; Match(T__1);
				State = 68; Match(ID);
				}
				}
				State = 73;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WriteContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public WriteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_write; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterWrite(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitWrite(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWrite(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WriteContext write() {
		WriteContext _localctx = new WriteContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_write);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(T__7);
			State = 75; expr(0);
			State = 80;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__1) {
				{
				{
				State = 76; Match(T__1);
				State = 77; expr(0);
				}
				}
				State = 82;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatwrapContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public StatwrapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statwrap; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterStatwrap(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitStatwrap(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatwrap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatwrapContext statwrap() {
		StatwrapContext _localctx = new StatwrapContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_statwrap);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(T__8);
			State = 84; stat();
			State = 88;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << ID) | (1L << INT) | (1L << BOOL) | (1L << FLOAT) | (1L << STRING) | (1L << UN_MIN) | (1L << NEG_OP))) != 0)) {
				{
				{
				State = 85; stat();
				}
				}
				State = 90;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 91; Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public IfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.EnterIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPatterListener typedListener = listener as IPatterListener;
			if (typedListener != null) typedListener.ExitIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPatterVisitor<TResult> typedVisitor = visitor as IPatterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfContext @if() {
		IfContext _localctx = new IfContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_if);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(T__10);
			State = 94; expr(0);
			State = 95; stat();
			State = 98;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				State = 96; Match(T__11);
				State = 97; stat();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
